--- a/styles.css
+++ b/styles.css
@@ -40,19 +40,26 @@
   align-items: center;
   justify-content: space-between;
   padding: 10px 30px;
+  max-width: 1200px;
+  margin: auto;
+  /*height: 50px;*/
+
   
 }
   .logo-header {
-    height: 50px;
-    margin-right: 20px;
+    height: 90px;
+   width: auto;
+   display: block;
+   object-fit: contain;
+   align-items: center;
   }
 
   header {
-  background-color: black
-  ;
+  background-color: black;
   color: white;
   padding: 20px;
-  text-align: center;
+  
+ 
 }
 
 header h2 {
@@ -223,7 +230,7 @@ footer {
 
 .card h2 a {
   text-decoration: none;
-  color: #4B0082; /* violet foncé chic */
+  color: #d4af37;
   font-weight: bold;
   font-size: 1.1rem;
   transition: color 0.3s ease;
@@ -539,6 +546,40 @@ footer {
 
 /* ============== RESPONSIVE - MOBILE (max 480px) ============== */
 @media (max-width: 480px) {
+  header {
+    height: auto;
+    padding: 10px 0;
+    width:100%;
+   
+  }
+  .header-container {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    padding: 10px;
+    width: 100%;
+    max-width: none;
+    height: auto;
+  }
+  .logo-header {
+    height: 40px;
+    width: auto;
+    margin: 0 auto;
+  }
+
+  header h2 {
+    font-size: 1rem;
+    margin: 5px 0;
+    text-align: center;
+  }
+
+  .logo-header {
+    height: 40px;
+    margin: 0 auto;
+  }
+
+  
   .cards {
     flex-direction: column;
     align-items: center;
@@ -555,15 +596,25 @@ footer {
   .hero-text p {
     font-size: 0.95rem;
   }
+  nav {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 5px;
+    margin-top: 10px;
+  }
 
   nav a {
+    font-size: O.6rem;
     display: block;
-    margin: 10px 0;
+    margin: 5px 0;
+    text-align: center;
+    font-size: 1rem;
+    width: 100%;
   }
 
-  header h2 {
-    font-size: 1.2rem;
-  }
+  
 
   .admin-button {
     width: 100%;
@@ -573,6 +624,24 @@ footer {
 
 /* ============== RESPONSIVE - TABLETTE (max 768px) ============== */
 @media (max-width: 768px) {
+  header {
+    padding: 15px 20px;
+    height: auto;
+  
+  }
+
+  .header-container {
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px 20px;
+    max-width: 100%;
+  }
+  .logo-header {
+    height: 50px;
+  }
+  
+
   .cards {
     flex-direction: column;
     align-items: center;
@@ -591,11 +660,12 @@ footer {
   }
 
   header h2 {
-    font-size: 1.4rem;
+    font-size: 1.3rem;
   }
 
   nav a {
     margin: 5px;
+    font-size: 1rem;
   }
 
   .admin-actions {
@@ -632,3 +702,23 @@ footer {
   font-weight: bold;
   margin-top: 10px;
 }
+
+
+/*======= produits title ======*/
+.product-title {
+  color: #d4af37 ;
+  font-weight: 700;
+  text-transform: uppercase;
+  font-size: 1.2rem;
+  margin-bottom: 10px;
+}
+
+.product-title a {
+  text-decoration: none;
+  color: inherit;
+}
+
+.product-title a:hover {
+  color: #b88b2b;
+}
+
